--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -106,15 +106,15 @@
     </div>
     <div class="col2">
         <div class="number">
-            <button type="button" class = "btn" value=1>1</button>
-            <button type="button" class = "btn" value=2>2</button>
-            <button type="button" class = "btn" value=3>3</button>
-            <button type="button" class = "btn" value=4>4</button>
-            <button type="button" class = "btn" value=5>5</button>
-            <button type="button" class = "btn" value=6>6</button>
-            <button type="button" class = "btn" value=7>7</button>
-            <button type="button" class = "btn" value=8>8</button>
-            <button type="button" class = "btn" value=9>9</button>
+            <button type="button" class = "btnNumber" value=1>1</button>
+            <button type="button" class = "btnNumber" value=2>2</button>
+            <button type="button" class = "btnNumber" value=3>3</button>
+            <button type="button" class = "btnNumber" value=4>4</button>
+            <button type="button" class = "btnNumber" value=5>5</button>
+            <button type="button" class = "btnNumber" value=6>6</button>
+            <button type="button" class = "btnNumber" value=7>7</button>
+            <button type="button" class = "btnNumber" value=8>8</button>
+            <button type="button" class = "btnNumber" value=9>9</button>
         </div>
         <div class="edit">
             <a href="#" class="generateBtn">Generate</a>
